# bought

./: README.md  config.ini  pyproject.toml
.github/workflows/: python-publish.yml
bought/: __main__.py  config.py
bought/sounds/: play.py
bought/websites/: newegg.py
